<resources>
    <string name="app_name">AndroidTrieSearchSample</string>
    <string name="empty_message">There is no person.</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
</resources>